fix overlap

--- a/app/assets/stylesheets/questionnaire.scss
+++ b/app/assets/stylesheets/questionnaire.scss
@@ -219,3 +219,9 @@ select:focus {
 button[type="submit"] {
   margin-bottom: 2rem;
 }
+
+// Don't have the "Vul iets in" label overlap with the "Anders namelijk" label
+.otherwise-textfield > .input-field > label:not(.label-icon).active {
+  -webkit-transform: translateY(-3px) scale(0.8);
+  transform: translateY(-3px) scale(0.8);
+}
